unpackaged/objects/copado__Static_Code_Analysis_Violation__c.object
<CustomObject>
	<description>This object will hold the details about every single violation found in Apex classes according to the specified ruleset.</description>
	<fields>
		<fullName>copado__File__c</fullName>
		<description>File analyzed by PMD.</description>
		<label>File</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Info_URL_Link__c</fullName>
		<formula>HYPERLINK(copado__Info_URL__c, IMAGE(&apos;/img/msg_icons/info24.png&apos;, &apos;Info URL&apos;, 18, 18) )</formula>
		<label>Info URL</label>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Info_URL__c</fullName>
		<description>Link to the PMD documentation about the rule violated.</description>
		<label>Info URL</label>
		<type>Url</type>
	</fields>
	<fields>
		<fullName>copado__Line__c</fullName>
		<description>Line of code that violated the rule.</description>
		<label>Line</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Message__c</fullName>
		<description>Help message thrown by the rule violated.</description>
		<label>Message</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Priority__c</fullName>
		<description>Level of severity of the rule violated.</description>
		<label>Priority</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Resolution__c</fullName>
		<label>Resolution</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Unresolved</fullName>
					<default>true</default>
					<label>Unresolved</label>
				</value>
				<value>
					<fullName>Fixed</fullName>
				</value>
				<value>
					<fullName>False Positive</fullName>
				</value>
				<value>
					<fullName>Won&apos;t fix</fullName>
				</value>
				<value>
					<fullName>Removed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Rule__c</fullName>
		<description>Name of the rule violated.</description>
		<label>Rule</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<fields>
		<fullName>copado__Score__c</fullName>
		<formula>6 -  copado__Priority__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Score</label>
		<precision>18</precision>
		<scale>0</scale>
		<type>Number</type>
	</fields>
	<fields>
		<fullName>copado__Severity__c</fullName>
		<description>CodeScan Severity</description>
		<label>Severity</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Info</fullName>
				</value>
				<value>
					<fullName>Minor</fullName>
				</value>
				<value>
					<fullName>Major</fullName>
				</value>
				<value>
					<fullName>Critical</fullName>
				</value>
				<value>
					<fullName>Blocker</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Static_Code_Analysis_Result__c</fullName>
		<label>Static Code Analysis Result</label>
		<referenceTo>copado__Static_Code_Analysis_Result__c</referenceTo>
		<relationshipLabel>Static Code Analysis Violations</relationshipLabel>
		<relationshipName>Static_Code_Analysis_Violations</relationshipName>
		<relationshipOrder>0</relationshipOrder>
		<type>MasterDetail</type>
	</fields>
	<fields>
		<fullName>copado__Status__c</fullName>
		<label>Status</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Open</fullName>
				</value>
				<value>
					<fullName>Resolved</fullName>
				</value>
				<value>
					<fullName>Reopened</fullName>
				</value>
				<value>
					<fullName>Closed</fullName>
				</value>
				<value>
					<fullName>Confirmed</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<fields>
		<fullName>copado__Type__c</fullName>
		<label>Type</label>
		<type>Picklist</type>
		<valueSet>
			<valueSetDefinition>
				<value>
					<fullName>Bug</fullName>
				</value>
				<value>
					<fullName>Vulnerability</fullName>
				</value>
				<value>
					<fullName>Code Smell</fullName>
				</value>
			</valueSetDefinition>
		</valueSet>
	</fields>
	<label>Static Code Analysis Violation</label>
	<nameField>
		<displayFormat>SCV-{000000}</displayFormat>
		<label>Static Code Analysis Violation Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Static Code Analysis Violations</pluralLabel>
	<recordTypes>
		<fullName>copado__CodeScan</fullName>
		<active>true</active>
		<description>Record Type for CodeScan integration. Requires CodeScan licensing.</description>
		<label>CodeScan</label>
	</recordTypes>
	<recordTypes>
		<fullName>copado__PMD</fullName>
		<active>true</active>
		<description>Record Type for free of charge PMD integration</description>
		<label>PMD</label>
	</recordTypes>
	<sharingModel>ControlledByParent</sharingModel>
</CustomObject>